[package]
name = "simple-json"
version = "0.1.2"
authors = ["Bryan Chen<xlchen1291@gmail.com>", "Jimmy Chu<shailamie@gmail.com>"]
description = "Simple JSON parser. Wasm / no_std ready."
edition = "2018"
repository = "https://github.com/sbnair/simple-json"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = [
	"no-std",
]

[dependencies]
paste = "0.1.10"
num-traits = { version = "0.2.11", default-features = false }

[features]
default = ["std"]
std = []
